[tool.poetry]
name = "keboola-ex-google-storage"
version = "0.1.0"
description = ""
authors = ["Michal Kral <michalkraal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
oauth2client = "^4.1.3"
google-api-python-client = "^2.72.0"
google-auth = "^2.16.0"
mypy = "^0.991"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
